--- a/KXOJ/MainWindow.xib
+++ b/KXOJ/MainWindow.xib
@@ -46,7 +46,7 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_splash.png" id="LrX-cs-Jrh">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_radio_page.png" id="LrX-cs-Jrh">
                                         <rect key="frame" x="0.0" y="20" width="320" height="455"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </imageView>
@@ -175,15 +175,15 @@
                         </viewController>
                     </viewControllers>
                 </navigationController>
-                <navigationController definesPresentationContext="YES" id="374">
+                <navigationController definesPresentationContext="YES" id="374" userLabel="Website">
                     <extendedEdge key="edgesForExtendedLayout"/>
-                    <tabBarItem key="tabBarItem" title="Events" image="icon_web.png" id="378"/>
+                    <tabBarItem key="tabBarItem" title="Website" image="icon_web.png" id="378" userLabel="Website"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="375" customClass="NavigationBarCustom">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.078431372550000003" green="0.1764705882" blue="0.52941176469999995" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <viewControllers>
-                        <viewController id="376" userLabel="Events" customClass="WebViewController">
+                        <viewController id="376" userLabel="Website" customClass="WebViewController">
                             <view key="view" contentMode="scaleToFill" id="391">
                                 <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -707,7 +707,7 @@
         <image name="alarm.png" width="30" height="30"/>
         <image name="arrow_left.png" width="15" height="20"/>
         <image name="arrow_right.png" width="15" height="20"/>
-        <image name="bg_splash.png" width="640" height="1136"/>
+        <image name="bg_radio_page.png" width="1800" height="1800"/>
         <image name="btn_set_alarm.png" width="552" height="88"/>
         <image name="call.png" width="64" height="64"/>
         <image name="email.png" width="64" height="64"/>
